Fixed challenge review buttons alignment

--- a/app/assets/stylesheets/admin/challenge_review.css.scss
+++ b/app/assets/stylesheets/admin/challenge_review.css.scss
@@ -16,7 +16,7 @@ img.commentsmallimage{
 }
 
 .adminbuttons{
-	width: 210px;
+  text-align: center;
 	margin-left: auto;
 	margin-right: auto;
 }
